--- a/ryan_fong_chinese_broccoli.html
+++ b/ryan_fong_chinese_broccoli.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="description" content="Ryan Fong Chinese Broccoli recipe">
     <meta charset="utf-8">
     <title>Ryan Fong Recipe</title>
+    <link rel="stylesheet" href="../../assets/css_reset.css" type="text/css"/>
+    <script src="../../assets/external_javascript_example.js" type="text/javascript"></script>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-12345678-9', 'auto');
+    ga('send', 'pageview');
+    </script>
   </head>
   <body>
 
@@ -55,7 +66,7 @@
     <h2>Reviews</h2>
     <form action="/reviews" method="post">
 
-      <label for="reviewer">Reviewer</label>
+      <label id="review-form" for="reviewer">Reviewer</label>
       <input id='reviewer' type="text" reviewer="reviewer">
 
       <label for="rating">Rating</label>
