--- a/ryan_fong_chinese_broccoli.html
+++ b/ryan_fong_chinese_broccoli.html
@@ -4,8 +4,9 @@
     <meta name="description" content="Ryan Fong Chinese Broccoli recipe">
     <meta charset="utf-8">
     <title>Ryan Fong Recipe</title>
-    <link rel="stylesheet" href="../../assets/css_reset.css" type="text/css"/>
-    <script src="../../assets/external_javascript_example.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css_syntax.css" type="text/css"/>
+    <link rel="stylesheet" href="css_reset.css" type="text/css"/>
+    <script src="external_javascript_example.js" type="text/javascript"></script>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,7 +31,7 @@
 
     <aside>
       <h2 id="ingredients">Ingredients</h2>
-      <ul>
+      <ul  class="ingredients-list">
         <li>Chinese Broccoli</li>
         <li>Oyster Sauce</li>
         <li>Garlic</li>
@@ -53,7 +54,7 @@
     <p>This is a simple recipe for Chinese Broccoli<p>
 
     <h2 id="directions">Directions</h2>
-    <ol>
+    <ol class = "directions-list">
       <li>Bring pan of 2 cups water to boil </li>
       <li>Add Chinese Broccoli and a pinch of sugar, let boil until water is gone</li>
       <li>Add olive oil</li>
