--- a/ryan_fong_chinese_broccoli.html
+++ b/ryan_fong_chinese_broccoli.html
@@ -4,8 +4,9 @@
     <meta name="description" content="Ryan Fong Chinese Broccoli recipe">
     <meta charset="utf-8">
     <title>Ryan Fong Recipe</title>
+    <link rel="stylesheet" href="css_custom_reset.css" type="text/css"/>
+    <link rel="stylesheet" href="custom_grid.css" type="text/css"/>
     <link rel="stylesheet" href="css_syntax.css" type="text/css"/>
-    <link rel="stylesheet" href="css_reset.css" type="text/css"/>
     <script src="external_javascript_example.js" type="text/javascript"></script>
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -29,9 +30,10 @@
       </nav>
     <header>
 
+    <div class="col col-1-3">
     <aside>
       <h2 id="ingredients">Ingredients</h2>
-      <ul  class="ingredients-list">
+      <ul class="ingredients-list">
         <li>Chinese Broccoli</li>
         <li>Oyster Sauce</li>
         <li>Garlic</li>
@@ -39,7 +41,9 @@
         <li>Sugar</li>
       </ul>
     </aside>
+  </div>
 
+  <div class="col col-2-3">
     <section>
     <h1>Chinese Broccoli</h1>
 
@@ -70,14 +74,14 @@
       <label id="review-form" for="reviewer">Reviewer</label>
       <input id='reviewer' type="text" reviewer="reviewer">
 
-      <label for="rating">Rating</label>
+      <!-- <label for="rating">Rating</label> -->
       1<input name='rating' type="radio" value="1" checked="checked">
       2<input name='rating' type="radio" value="2">
       3<input name='rating' type="radio" value="3">
       4<input name='rating' type="radio" value="4">
       5<input name='rating' type="radio" value="5">
 
-      <label for="cooking_expertise">Cooking Expertise</label>
+      <!-- <label for="cooking_expertise">Cooking Expertise</label> -->
       <select id="cooking_expertise">
         <option value="Select Cooking Expertise" disabled ="true" selected = "true">Select Cooking Expertise</option>
         <option value="Sometimes Cook">Sometimes Cook</option>
@@ -92,6 +96,7 @@
       <input type="submit" value="Submit Review">
     </form>
   </section>
+</div>
 
   <footer>
     <p>This is an original Ryan Fong recipe</p>
